# RogueCodeChecker

./: .gitignore  AGENTS.md  AI_SECURITY_RULES.md  LLM_CODE_REVIEW.md  README.md  allowlists.yaml  app.yaml  backlog.md  main.py  policy.yaml  pyproject.toml  requirements.txt  run_app.py  run_app_oss.py  scanner.ipynb
.home_tmp/.semgrep/: settings.yml
core/: models.py  oss_detect_secrets.py  oss_nb_preprocess.py  oss_runner.py  oss_semgrep.py  oss_sqlfluff.py  policy.py  report.py  utils.py
osscheck/: main.py
osscheck_cli/: __init__.py  main.py
roguecheck/: llm_backends.py  main.py  models.py  oss_detect_secrets.py  oss_llm_reviewer.py  oss_nb_preprocess.py  oss_runner.py  oss_semgrep.py  oss_shellcheck.py  oss_sql_strict.py  oss_sqlcheck.py  oss_sqlfluff.py  policy.py  report.py  rules_bash.py  rules_dbx.py  rules_python.py  rules_sql.py  scanner.py  sniff.py  utils.py
roguecheck/rules/: README.md  prompt-injection.yaml  python-security.yaml
scripts/: cli_app_parity_check.sh  scan_local.sh  setup_dev.sh
semgrep_rules/: README.md  general_security.yaml  llm_security.yaml
semgrep_rules/ai-security/: ai-code-quality.yaml
streamlit_app/: README.md  main.py
streamlit_app/components/: config_panel.py  file_upload.py  results_table.py
streamlit_app/services/: scanner_service.py
streamlit_app_oss/: main.py
streamlit_app_oss/components/: __init__.py  config_panel.py  diagnostics.py  file_upload.py  results_table.py
streamlit_app_oss/services/: __init__.py  scanner_service.py
test_output/: ai_generated_malware_report.md  custom_policy_development_report.md  custom_policy_enterprise_report.md  dangerous_python_report.md  dangerous_sql_report.md  rogue_test_file_report.md  test_samples_report.md
test_samples/: Dockerfile  InsecureJava.java  README.md  ai_generated_malware.py  allowlists_corporate.yaml  custom_policy_development.yaml  custom_policy_enterprise.yaml  dangerous_bash.sh  dangerous_python.py  dangerous_sql.sql  databricks_udf.py  insecure.tf  insecure_config.yaml  insecure_js.js  insecure_notebook.ipynb  insecure_notes.txt  insecure_snippets.md  mixed_with_ignores.py  network_rules_lenient.yaml  network_rules_strict.yaml  prompt_injection_example.py  rogue_test_file.py  safe_python.py
tests/: __init__.py  test_wrapper_script.py
